--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -28,7 +28,7 @@ notifications = mako
 polkit = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 waybar = waybar
 fcitx = fcitx5
-eww = bash ~/.config/eww/dashboard/launch_dashboard
+#eww = bash ~/.config/eww/dashboard/launch_dashboard
 
 [blur]
 blur_by_default = type is "background" | app_id contains "waybar"
