--- a/pacman.conf
+++ b/pacman.conf
@@ -75,14 +75,16 @@ LocalFileSigLevel = Optional
 
 [core]
 #Include = /etc/pacman.d/mirrorlist
-Server = file:///www/mirrors/archlinux/$repo/os/$arch
+#Server = file:///www/mirrors/archlinux/$repo/os/$arch
+Server = https://mirrors.hoream.top/archlinux/$repo/os/$arch
 
 #[extra-testing]
 #Include = /etc/pacman.d/mirrorlist
 
 [extra]
 #Include = /etc/pacman.d/mirrorlist
-Server = file:///www/mirrors/archlinux/$repo/os/$arch
+#Server = file:///www/mirrors/archlinux/$repo/os/$arch
+Server = https://mirrors.hoream.top/archlinux/$repo/os/$arch
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
@@ -100,8 +102,10 @@ Server = file:///www/mirrors/archlinux/$repo/os/$arch
 #Server = file:///home/custompkgs
 [archlinuxcn]
 SigLevel = Optional TrustAll
-Server = file:///www/mirrors/archlinuxcn/$arch
+#Server = file:///www/mirrors/archlinuxcn/$arch
+Server = https://mirrors.hoream.top/archlinuxcn/$arch
 
 [archoream]
 SigLevel = Optional TrustAll
-Server = file:///www/mirrors/archoream
+#Server = file:///www/mirrors/archoream
+Server = https://mirrors.hoream.top/archoream
