--- a/pacman.conf
+++ b/pacman.conf
@@ -109,3 +109,8 @@ Server = https://mirrors.hoream.top/archlinuxcn/$arch
 SigLevel = Optional TrustAll
 #Server = file:///www/mirrors/archoream
 Server = https://mirrors.hoream.top/archoream
+
+[games]
+SigLevel = Optional TrustAll
+#Server = file:///www/mirrors/archoream
+Server = https://mirrors.hoream.top/games
