add xdg-desktop-portal for wayfire

--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -20,7 +20,7 @@ zoom_duration = 500
 zoom_enabled_for = none
 
 [autostart]
-environment = dbus-update-activation-environment --systemd WAYLAND_DISPLAY DISPLAY XAUTHORITY
+environment = dbus-update-activation-environment --systemd XDG_CURRENT_DESKTOP WAYLAND_DISPLAY DISPLAY XAUTHORITY 
 autostart_wf_shell = false
 background = swaybg -i ~/Pictures/background.png -m fill
 clipmand = wl-paste -t text --watch clipman store --max-items=100
