--- a/airootfs/etc/keyboard-layout.conf
+++ b/airootfs/etc/keyboard-layout.conf
@@ -2,7 +2,6 @@
   "mappings": [
 
     { "from": [ "CAPSLOCK" ], "to": ["ESC"] },
-    { "from": [ "ESC" ], "to": [] },
     { "from": [ "RIGHTALT" ], "to": [] },
     { "from": [ "RIGHTALT", "A" ], "to": [ "LEFT" ] },
     { "from": [ "RIGHTALT", "W" ], "to": [ "UP" ] },
@@ -33,7 +32,7 @@
     { "from": [ "RIGHTALT", "LEFTCTRL", "W" ], "to": [ "PAGEUP" ] },
     { "from": [ "RIGHTALT", "LEFTCTRL", "S" ], "to": [ "PAGEDOWN" ] },
 
-    { "from": [ "ESC", "CAPSLOCK" ], "to": [ "CAPSLOCK" ] },
+    { "from": [ "RIGHTALT", "CAPSLOCK" ], "to": [ "CAPSLOCK" ] },
     
 
     
