add archive source to /etc/pacman.d/mirrorlist

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -77,9 +77,11 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [core]
+SigLevel = Optional TrustAll
 Include = /etc/pacman.d/mirrorlist
 
 [extra]
+SigLevel = Optional TrustAll
 Include = /etc/pacman.d/mirrorlist
 
 #[community-testing]
@@ -104,12 +106,15 @@ Include = /etc/pacman.d/mirrorlist
 #Server = file:///home/custompkgs
 
 [archlinuxcn]
+SigLevel = Optional TrustAll
 Include = /etc/pacman.d/archlinuxcn-mirrorlist
 
 [archoream]
+SigLevel = Optional TrustAll
 Server = https://mirrors.hoream.top/archoream
 
 #[games]
+#SigLevel = Optional TrustAll
 #Server = https://mirrors.hoream.top/games
 
 #[arch4edu]
