--- a/pacman.conf
+++ b/pacman.conf
@@ -112,5 +112,5 @@ Server = file:///www/mirrors/archoream
 
 [games]
 SigLevel = Optional TrustAll
-Server = file:///www/mirrors/archoream
+Server = file:///www/mirrors/games
 #Server = https://mirrors.hoream.top/games
