--- a/airootfs/etc/keyboard-layout.conf
+++ b/airootfs/etc/keyboard-layout.conf
@@ -2,6 +2,7 @@
   "mappings": [
 
     { "from": [ "CAPSLOCK" ], "to": ["ESC"] },
+    { "from": [ "ESC" ], "to": [] },
     { "from": [ "RIGHTALT" ], "to": [] },
     { "from": [ "RIGHTALT", "A" ], "to": [ "LEFT" ] },
     { "from": [ "RIGHTALT", "W" ], "to": [ "UP" ] },
@@ -28,11 +29,17 @@
     { "from": [ "RIGHTALT", "3" ], "to": [ "LEFTSHIFT", "3" ] },
     { "from": [ "RIGHTALT", "4" ], "to": [ "LEFTSHIFT", "4" ] },
     { "from": [ "RIGHTALT", "5" ], "to": [ "LEFTSHIFT", "5" ] },
+    { "from": [ "RIGHTALT", "6" ], "to": [ "LEFTSHIFT", "6" ] },
     { "from": [ "RIGHTALT", "Q" ], "to": [ "COMPOSE" ] },
     { "from": [ "RIGHTALT", "LEFTCTRL", "W" ], "to": [ "PAGEUP" ] },
     { "from": [ "RIGHTALT", "LEFTCTRL", "S" ], "to": [ "PAGEDOWN" ] },
 
-    { "from": [ "RIGHTALT", "CAPSLOCK" ], "to": [ "CAPSLOCK" ] },
+    { "from": [ "ESC", "CAPSLOCK" ], "to": [ "CAPSLOCK" ] },
+    { "from": [ "RIGHTALT", "Q" ], "to": [ "COMPOSE" ] },
+    { "from": [ "RIGHTALT", "LEFTCTRL", "W" ], "to": [ "PAGEUP" ] },
+    { "from": [ "RIGHTALT", "LEFTCTRL", "S" ], "to": [ "PAGEDOWN" ] },
+
+    { "from": [ "ESC", "CAPSLOCK" ], "to": [ "CAPSLOCK" ] },
     
 
     
