--- a/airootfs/etc/skel/.config/fcitx5/conf/pinyin.conf
+++ b/airootfs/etc/skel/.config/fcitx5/conf/pinyin.conf
@@ -6,8 +6,8 @@ ShowShuangpinMode=True
 PageSize=7
 # 启用拼写检查
 SpellEnabled=True
-# 启用颜文字
-EmojiEnabled=True
+# 启用符号
+SymbolsEnabled=True
 # 启用拆字
 ChaiziEnabled=True
 # 启用 Unicode CJK 拓展区 B 中的字符
@@ -16,8 +16,12 @@ ExtBEnabled=True
 CloudPinyinEnabled=True
 # 云拼音位置
 CloudPinyinIndex=2
-# 在程序中显示预编辑文本
-PreeditInApplication=False
+# 加载云拼音的时候显示动画
+CloudPinyinAnimation=True
+# 总是显示云拼音的占位符
+KeepCloudPinyinPlaceHolder=False
+# 预编辑模式
+PreeditMode="Composing pinyin"
 # 将嵌入预编辑文本的光标固定在开头
 PreeditCursorPositionAtBeginning=True
 # 在预编辑中显示完整拼音
@@ -122,4 +126,6 @@ L_N=False
 S_SH=False
 # z <-> zh
 Z_ZH=False
+# 纠错布局
+Correction=None
 
