--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -111,7 +111,7 @@ Include = /etc/pacman.d/archlinuxcn-mirrorlist
 
 [archoream]
 SigLevel = Optional TrustAll
-Server = https://mirrors.hoream.top/archoream
+Server = https://mirrors.hoream.top/archoream/$arch
 
 #[games]
 #SigLevel = Optional TrustAll
