--- a/pacman.conf
+++ b/pacman.conf
@@ -107,8 +107,8 @@ Server = file:///www/mirrors/archlinuxcn/$arch
 
 [archoream]
 SigLevel = Optional TrustAll
-Server = file:///www/mirrors/archoream
-#Server = https://mirrors.hoream.top/archoream
+Server = file:///www/mirrors/archoream/$arch
+#Server = https://mirrors.hoream.top/archoream/$arch
 
 [games]
 SigLevel = Optional TrustAll
