--- a/airootfs/etc/skel/.config/fcitx5/conf/classicui.conf
+++ b/airootfs/etc/skel/.config/fcitx5/conf/classicui.conf
@@ -20,8 +20,17 @@ PreferTextIcon=True
 ShowLayoutNameInIcon=True
 # 使用输入法的语言来显示文字
 UseInputMethodLangaugeToDisplayText=True
-# 主题
-Theme=marisa
-# 固定 Wayland 的字体 DPI
+# Theme
+Theme=Simple-light
+# Dark Theme
+DarkTheme=default-dark
+# Follow system light/dark color scheme
+UseDarkTheme=True
+# Follow system accent color if it is supported by theme and desktop
+UseAccentColor=True
+# Use Per Screen DPI on X11
+PerScreenDPI=True
+# Force font DPI on Wayland
 ForceWaylandDPI=0
-
+# Enable fractional scale under Wayland
+EnableFractionalScale=True
