--- a/airootfs/etc/skel/.config/fcitx5/conf/classicui.conf
+++ b/airootfs/etc/skel/.config/fcitx5/conf/classicui.conf
@@ -21,9 +21,9 @@ ShowLayoutNameInIcon=True
 # 使用输入法的语言来显示文字
 UseInputMethodLangaugeToDisplayText=True
 # Theme
-Theme=Simple-light
+Theme=Simple-white
 # Dark Theme
-DarkTheme=default-dark
+DarkTheme=Simple-dark
 # Follow system light/dark color scheme
 UseDarkTheme=True
 # Follow system accent color if it is supported by theme and desktop
