update wayfire related settings

--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -22,7 +22,8 @@ zoom_enabled_for = none
 [autostart]
 environment = dbus-update-activation-environment --systemd XDG_CURRENT_DESKTOP WAYLAND_DISPLAY DISPLAY XAUTHORITY 
 autostart_wf_shell = false
-background = swaybg -i ~/Pictures/background.png -m fill
+#background = swaybg -i /usr/share/backgrounds/xfce/background.png -m fill
+background = pcmanfm-qt --desktop
 clipmand = wl-paste -t text --watch clipman store --max-items=100
 notifications = mako
 polkit = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -88,7 +89,7 @@ command_command = wofi --show run -e
 command_firefox = firefox
 command_goldendict = goldendict
 command_crow = crow
-command_launcher = wofi --show drun -I -i
+command_launcher = ~/.config/rofi/launcher
 command_rofi = rofi -modi drun -theme arthur -show drun -show-icons 
 command_light_down = ~/Scripts/light.sh -U
 command_light_up = ~/Scripts/light.sh -A
@@ -125,7 +126,8 @@ focus_button_with_modifiers = false
 focus_buttons = BTN_LEFT | BTN_MIDDLE | BTN_RIGHT
 focus_buttons_passthrough = true
 max_render_time = -1
-plugins = alpha animate autostart command expo fast-switcher grid invert move place resize window-rules wm-actions wobbly zoom switcher oswitch vswitch vswipe extra-gestures gtk-shell scale wf-info
+only_decorate_gtk = true
+plugins = alpha animate autostart command expo fast-switcher grid invert move place resize window-rules wm-actions wobbly zoom switcher oswitch vswitch vswipe extra-gestures gtk-shell scale wf-info firedecor
 # server由compositor渲染边框可取消大部分边框
 preferred_decoration_mode = client
 transaction_timeout = 100
@@ -217,7 +219,7 @@ toggle = none
 
 [input]
 click_method = default
-cursor_size = 25
+cursor_size = 32
 cursor_theme = oreo_pink_cursors
 disable_touchpad_while_mouse = false
 disable_touchpad_while_typing = true
@@ -418,3 +420,67 @@ interpolation_method = 0
 modifier = <super> 
 smoothing_duration = 300
 speed = 0.010000
+
+[firedecor]
+active_accent = \#3C3D42FF
+active_border = \#3C3D42FF
+active_outline = \#000000FF
+active_title = \#C5C8C6FF
+border_size = 18 1
+button_size = 18
+button_style = simple
+corner_radius = 15
+debug_mode = false
+extra_themes = Code Typora Obs Terminal
+font = DejaVuSansM Nerd Font Mono Bold
+font_size = 16
+hovered_close = \#7C3B47FF
+hovered_max = \#4F6735FF
+hovered_min = \#804F32FF
+icon_size = 16
+icon_theme = Yaru-dark
+ignore_views = app_id is "org.jackhuang.hmcl.Launcher" | app_id is "chromium" | app_id is "microsoft-edge" | app_id is "QQ" | app_id is "mpv" | app_id contains "godotengine" | (app_id is "" & title is "Sniffnet" ) | app_id is "GLava" | (app_id is "jetbrains-studio" & title contains "win") | app_id is "steam" | title contains "WPS" | app_id is "wechat" | app_id is "nil"
+inactive_accent = \#3C3D42FF
+inactive_border = \#3C3D42FF
+inactive_buttons = true
+inactive_outline = \#000000FF
+inactive_title = \#C5C8C6FF
+layout = a | icon P4 title | minimize p maximize p close p | Atrtl -
+max_title_size = 750
+normal_close = \#F7768EFF
+normal_max = \#9ECE6AFF
+normal_min = \#FF9E64FF
+outline_size = 0
+padding_size = 4
+round_on = tl tr
+
+[Code]
+active_accent = \#3b4261ff
+active_border = \#3b4261ff
+inactive_accent = \#3b4261ff
+inactive_border = \#3b4261ff
+uses_if = app_id is "code-oss"
+
+[Obs]
+active_accent = \#31363bff
+active_border = \#31363bff
+inactive_accent = \#31363bff
+inactive_border = \#31363bff
+uses_if = app_id is "com.obsproject.Studio"
+
+[Typora]
+active_accent = \#24283bff
+active_border = \#24283bff
+inactive_accent = \#24283bff
+inactive_border = \#24283bff
+uses_if = app_id is "Typora" | app_id is "KiCad"
+
+[Terminal]
+layout =
+border_size = 2 2 2 2
+round_on =
+active_accent = \#0db9d7ff
+active_border = \#0db9d7ff
+inactive_accent = \#a9b1d6ff
+inactive_border = \#a9b1d6ff
+uses_if = app_id is "xfce4-terminal" | app_id is "Alacritty" | app_id is "kitty"
