--- a/airootfs/etc/skel/.config/qt6ct/qt6ct.conf
+++ b/airootfs/etc/skel/.config/qt6ct/qt6ct.conf
@@ -2,6 +2,7 @@
 color_scheme_path=/usr/share/qt6ct/colors/airy.conf
 custom_palette=false
 standard_dialogs=default
+icon_theme=Yaru
 style=kvantum
 
 [Fonts]
