update waybar and wayfire clipboard, screen record and screen shot

--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -24,7 +24,8 @@ environment = dbus-update-activation-environment --systemd XDG_CURRENT_DESKTOP W
 autostart_wf_shell = false
 #background = swaybg -i /usr/share/backgrounds/xfce/background.png -m fill
 background = pcmanfm-qt --desktop
-clipmand = wl-paste -t text --watch clipman store --max-items=100
+clipimg = wl-paste -t image --watch cliphist -max-items 200 store
+cliptxt = wl-paste -t text --watch cliphist -max-items 200 store
 notifications = mako
 polkit = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 waybar = waybar
@@ -54,7 +55,7 @@ binding_telegram = <super> KEY_O
 binding_fsearch = <super> KEY_F
 binding_primaryclipboard = <super> KEY_ENTER
 binding_systemmon = <ctrl> <shift> KEY_ESC
-binding_clipman = <alt> KEY_E
+binding_cliphist = <alt> KEY_E
 binding_command = <super> KEY_C
 binding_firefox = <super> KEY_K
 binding_goldendict = <alt> KEY_U
@@ -67,11 +68,6 @@ binding_makodismiss = <alt> KEY_N
 binding_makoinvoke = <alt> <shift> KEY_N
 binding_mute = KEY_MUTE
 binding_nautilus = <super> KEY_U
-binding_screenshot = KEY_SYSRQ
-binding_screenshot_interactive = <shift> KEY_SYSRQ
-binding_windowshot = <ctrl> KEY_SYSRQ
-binding_cast = <super> KEY_SYSRQ
-binding_killcast = <super> <shift> KEY_SYSRQ
 binding_suspend = <shift> <super> KEY_BACKSPACE
 binding_wcm = <super> KEY_S
 binding_wlogout = <super> <alt> KEY_ESC
@@ -80,11 +76,12 @@ binding_alacritty = <super> <shift> KEY_ENTER
 binding_dashboard = <super> KEY_P
 binding_ocr = <super> KEY_R
 binding_musicfox = <super> KEY_M
+binding_wlsunset = <super> KEY_N
 command_telegram = /usr/bin/env QT_QPA_PLATFORMTHEME=gtk3 telegram-desktop
 command_fsearch = fsearch
 command_primaryclipboard = wl-paste --primary | head -c -1 | wtype -
 command_systemmon = gnome-system-monitor
-command_clipman = clipman pick -t wofi
+command_cliphist = rofi -modi clipboard:~/.local/bin/cliphist-rofi-img -show clipboard -show-icons -theme ~/.config/rofi/cliphist.rasi
 command_command = wofi --show run -e
 command_firefox = firefox
 command_goldendict = goldendict
@@ -99,8 +96,6 @@ command_makodismiss = makoctl dismiss -g
 command_makoinvoke = makoctl invoke
 command_mute = amixer set Master toggle
 command_nautilus = nautilus
-command_screenshot = grim $(date '+%F_%T').png
-command_screenshot_interactive = bash ~/Scripts/screen_capture.sh
 command_windowshot = bash ~/Scripts/windowshot.sh
 command_cast = zenity --info --text="录屏将开始" && sleep 1 && wf-recorder -c hevc_vaapi
 command_killcast = pkill wf-recorder && zenity --info --text="录屏已停止"
@@ -114,6 +109,22 @@ command_alacritty = alacritty
 command_dashboard = bash ~/.config/eww/dashboard/launch_dashboard
 command_ocr = ~/Scripts/wayland-ocr.sh
 command_musicfox = ~/Scripts/musicfox.sh
+command_wlsunset = ~/.local/bin/waybar-wlsun-set.sh --toggle
+
+command_screenshot = ~/.local/bin/screen-shot.sh -f
+command_screenshot_interactive = ~/.local/bin/screen-shot.sh -s
+command_screenshot_window = ~/.local/bin/screen-shot.sh -w
+command_screencast = ~/.local/bin/screen-cast.sh --toggle --fullscreen
+command_screencast_interactive = ~/.local/bin/screen-cast.sh --toggle --select
+command_screencast_window = ~/.local/bin/screen-cast.sh --toggle --window
+
+binding_screenshot = KEY_SYSRQ
+binding_screenshot_interactive = <shift> KEY_SYSRQ
+binding_screenshot_window = <ctrl> KEY_SYSRQ
+binding_screencast = <super> KEY_SYSRQ
+binding_screencast_interactive = <super> <shift> KEY_SYSRQ
+binding_screencast_window = <super> <ctrl> KEY_SYSRQ
+
 repeatable_binding_light_down = KEY_BRIGHTNESSDOWN
 repeatable_binding_light_up = KEY_BRIGHTNESSUP
 repeatable_binding_volume_down = KEY_VOLUMEDOWN
