add change light

--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -31,6 +31,7 @@ polkit = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 waybar = waybar
 fcitx = fcitx5
 #eww = bash ~/.config/eww/dashboard/launch_dashboard
+wob = ~/.local/bin/wob.sh
 
 [blur]
 blur_by_default = type is "background" | app_id contains "waybar"
@@ -88,8 +89,8 @@ command_goldendict = goldendict
 command_crow = crow
 command_launcher = ~/.config/rofi/launcher
 command_rofi = rofi -modi drun -theme arthur -show drun -show-icons 
-command_light_down = ~/Scripts/light.sh -U
-command_light_up = ~/Scripts/light.sh -A
+command_light_down = ~/.local/bin/light.sh -U
+command_light_up = ~/.local/bin/light.sh -A
 command_lock = swaylock -i ~/Pictures/壁纸/lock.png -s fill --clock
 command_logout = loginctl terminate-user $USER
 command_makodismiss = makoctl dismiss -g
