--- a/airootfs/etc/skel/.config/mako/config
+++ b/airootfs/etc/skel/.config/mako/config
@@ -1,8 +1,8 @@
 # Colors
 
-background-color=#303446
+background-color=#1e1e1e
 text-color=#c6d0f5
-border-color=#8caaee
+border-color=#14a2bf
 progress-color=over #414559
 max-history=10
 
