add nm-applet for network connection support

--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -32,6 +32,7 @@ waybar = waybar
 fcitx = fcitx5
 #eww = bash ~/.config/eww/dashboard/launch_dashboard
 wob = ~/.local/bin/wob.sh
+nm_applet = /usr/bin/nm-applet
 
 [blur]
 blur_by_default = type is "background" | app_id contains "waybar"
