comment unvalid theme

--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -17,23 +17,23 @@ if loadfont "${prefix}/fonts/unicode.pf2" ; then
     terminal_output console
 fi
 
-# Theme
-insmod gfxmenu
-search --no-floppy --fs-uuid --set=root ${ARCHISO_UUID}
-loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_12.pf2
-loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_14.pf2
-loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_16.pf2
-loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_24.pf2
-loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_32.pf2
-loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_48.pf2
-loadfont ($root)/usr/share/grub/themes/vimix-color-2k/terminus-12.pf2
-loadfont ($root)/usr/share/grub/themes/vimix-color-2k/terminus-14.pf2
-loadfont ($root)/usr/share/grub/themes/vimix-color-2k/terminus-16.pf2
-loadfont ($root)/usr/share/grub/themes/vimix-color-2k/terminus-18.pf2
-insmod jpeg
-insmod png
-set theme=($root)/usr/share/grub/themes/vimix-color-2k/theme.txt
-export theme
+## Theme
+#insmod gfxmenu
+#search --no-floppy --fs-uuid --set=root ${ARCHISO_UUID}
+#loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_12.pf2
+#loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_14.pf2
+#loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_16.pf2
+#loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_24.pf2
+#loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_32.pf2
+#loadfont ($root)/usr/share/grub/themes/vimix-color-2k/dejavu_sans_48.pf2
+#loadfont ($root)/usr/share/grub/themes/vimix-color-2k/terminus-12.pf2
+#loadfont ($root)/usr/share/grub/themes/vimix-color-2k/terminus-14.pf2
+#loadfont ($root)/usr/share/grub/themes/vimix-color-2k/terminus-16.pf2
+#loadfont ($root)/usr/share/grub/themes/vimix-color-2k/terminus-18.pf2
+#insmod jpeg
+#insmod png
+#set theme=($root)/usr/share/grub/themes/vimix-color-2k/theme.txt
+#export theme
 
 # Enable serial console
 if serial --unit=0 --speed=115200; then
