update wayfire logout

--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -105,7 +105,7 @@ command_suspend = systemctl suspend
 command_volume_down = amixer set Master 5%- | grep 'Left:' | awk -F'[][]' '{ print $2 }' | tr -d '%' > /run/user/1000/audio.sock
 command_volume_up = amixer set Master 5%+ | grep 'Left:' | awk -F'[][]' '{ print $2 }' | tr -d '%' > /run/user/1000/audio.sock
 command_wcm = wcm
-command_wlogout = wlogout
+command_wlogout = /opt/wayfire-hoream/bin/wayland-logout
 command_terminal = xfce4-terminal
 command_alacritty = alacritty
 command_dashboard = bash ~/.config/eww/dashboard/launch_dashboard
