--- a/airootfs/etc/keyboard-layout.conf
+++ b/airootfs/etc/keyboard-layout.conf
@@ -24,12 +24,6 @@
     { "from": [ "RIGHTALT", "B" ], "to": [ "LEFTSHIFT", "0" ] },
     { "from": [ "RIGHTALT", "C" ], "to": [ "LEFTSHIFT", "MINUS" ] },
     { "from": [ "RIGHTALT", "GRAVE" ], "to": [ "LEFTSHIFT", "GRAVE" ] },
-    { "from": [ "RIGHTALT", "1" ], "to": [ "LEFTSHIFT", "1" ] },
-    { "from": [ "RIGHTALT", "2" ], "to": [ "LEFTSHIFT", "2" ] },
-    { "from": [ "RIGHTALT", "3" ], "to": [ "LEFTSHIFT", "3" ] },
-    { "from": [ "RIGHTALT", "4" ], "to": [ "LEFTSHIFT", "4" ] },
-    { "from": [ "RIGHTALT", "5" ], "to": [ "LEFTSHIFT", "5" ] },
-    { "from": [ "RIGHTALT", "6" ], "to": [ "LEFTSHIFT", "6" ] },
     { "from": [ "RIGHTALT", "Q" ], "to": [ "COMPOSE" ] },
     { "from": [ "RIGHTALT", "LEFTCTRL", "W" ], "to": [ "PAGEUP" ] },
     { "from": [ "RIGHTALT", "LEFTCTRL", "S" ], "to": [ "PAGEDOWN" ] },
@@ -41,7 +35,18 @@
 
     { "from": [ "ESC", "CAPSLOCK" ], "to": [ "CAPSLOCK" ] },
     
-
+    { "from": [ "RIGHTALT", "1" ], "to": [ "F1" ] },
+    { "from": [ "RIGHTALT", "2" ], "to": [ "F2" ] },
+    { "from": [ "RIGHTALT", "3" ], "to": [ "F3" ] },
+    { "from": [ "RIGHTALT", "4" ], "to": [ "F4" ] },
+    { "from": [ "RIGHTALT", "5" ], "to": [ "F5" ] },
+    { "from": [ "RIGHTALT", "6" ], "to": [ "F6" ] },
+    { "from": [ "RIGHTALT", "7" ], "to": [ "F7" ] },
+    { "from": [ "RIGHTALT", "8" ], "to": [ "F8" ] },
+    { "from": [ "RIGHTALT", "9" ], "to": [ "F9" ] },
+    { "from": [ "RIGHTALT", "0" ], "to": [ "F10" ] },
+    { "from": [ "RIGHTALT", "MINUS" ], "to": [ "F11" ] },
+    { "from": [ "RIGHTALT", "EQUAL" ], "to": [ "F12" ] },
     
     { "from": [ "COMPOSE" ], "to": [] },
     { "from": [ "COMPOSE", "A" ], "to": [ "1" ] },
