--- a/airootfs/etc/skel/.config/qt5ct/qt5ct.conf
+++ b/airootfs/etc/skel/.config/qt5ct/qt5ct.conf
@@ -2,7 +2,7 @@
 color_scheme_path=/usr/share/qt5ct/colors/airy.conf
 custom_palette=false
 standard_dialogs=default
-icon_theme=Yaru
+icon_theme=breeze-dark
 style=kvantum
 
 [Fonts]
