--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -93,17 +93,17 @@ command_rofi = rofi -modi drun -theme arthur -show drun -show-icons
 command_light_down = ~/.local/bin/light.sh -U
 command_light_up = ~/.local/bin/light.sh -A
 command_lock = swaylock -i ~/Pictures/壁纸/lock.png -s fill --clock
-command_logout = loginctl terminate-user $USER
+command_logout = wayland-logout
 command_makodismiss = makoctl dismiss -g
 command_makoinvoke = makoctl invoke
-command_mute = amixer set Master toggle
+command_mute = wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 command_nautilus = nautilus
 command_windowshot = bash ~/Scripts/windowshot.sh
 command_cast = zenity --info --text="录屏将开始" && sleep 1 && wf-recorder -c hevc_vaapi
 command_killcast = pkill wf-recorder && zenity --info --text="录屏已停止"
 command_suspend = systemctl suspend
-command_volume_down = amixer set Master 5%- | grep 'Left:' | awk -F'[][]' '{ print $2 }' | tr -d '%' > /run/user/1000/audio.sock
-command_volume_up = amixer set Master 5%+ | grep 'Left:' | awk -F'[][]' '{ print $2 }' | tr -d '%' > /run/user/1000/audio.sock
+command_volume_down = ~/.local/bin/audio.sh -U
+command_volume_up = ~/.local/bin/audio.sh -A
 command_wcm = wcm
 command_wlogout = /opt/wayfire-hoream/bin/wayland-logout
 command_terminal = xfce4-terminal
