--- a/airootfs/etc/skel/.config/qt5ct/qt5ct.conf
+++ b/airootfs/etc/skel/.config/qt5ct/qt5ct.conf
@@ -1,8 +1,8 @@
 [Appearance]
-color_scheme_path=/usr/share/qt5ct/colors/airy.conf
-custom_palette=false
-standard_dialogs=default
+color_scheme_path=/home/arch/.config/qt5ct/style-colors.conf
+custom_palette=true
 icon_theme=breeze-dark
+standard_dialogs=default
 style=kvantum
 
 [Fonts]
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\xff\xff\xff\xfd\xff\xff\xff\xe2\0\0\x3\xba\0\0\x2\xf6\0\0\0\0\0\0\0\0\0\0\x3\xb7\0\0\x2\xf3\0\0\0\0\0\0\0\0\n\0\0\0\0\0\0\0\0\0\0\0\x3\xb7\0\0\x2\xf3)
+geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\x1e\0\0\0=\0\0\x4\0\0\0\x2\xde\0\0\x1 \0\0\0\x63\0\0\x3\xfe\0\0\x2\xdc\0\0\0\0\0\0\0\0\x5\0\0\0\x1 \0\0\0\x63\0\0\x3\xfe\0\0\x2\xdc)"
 
 [Troubleshooting]
 force_raster_widgets=1
