--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -23,7 +23,7 @@ zoom_enabled_for = none
 environment = dbus-update-activation-environment --systemd XDG_CURRENT_DESKTOP WAYLAND_DISPLAY DISPLAY XAUTHORITY 
 autostart_wf_shell = false
 #background = swaybg -i /usr/share/backgrounds/xfce/background.png -m fill
-background = pcmanfm-qt --desktop
+background = xfdesktop
 clipimg = wl-paste -t image --watch cliphist -max-items 200 store
 cliptxt = wl-paste -t text --watch cliphist -max-items 200 store
 notifications = mako
