--- a/airootfs/etc/skel/Desktop/org.gnome.gedit.desktop
+++ b/airootfs/etc/skel/Desktop/org.gnome.gedit.desktop
@@ -1,1 +1,370 @@
-/usr/share/applications/org.gnome.gedit.desktop
+[Desktop Entry]
+Name[af]=gedit
+Name[am]=gedit
+Name[an]=gedit
+Name[as]=gedit
+Name[ast]=gedit
+Name[az]=gedit
+Name[be]=gedit
+Name[bn_IN]=gedit
+Name[br]=gedit
+Name[bs]=gedit
+Name[ca]=gedit
+Name[ckb]=‫gedit
+Name[crh]=gedit
+Name[cs]=gedit
+Name[da]=gedit
+Name[de]=gedit
+Name[el]=gedit
+Name[en_CA]=gedit
+Name[en_GB]=gedit
+Name[eo]=gedit
+Name[es]=gedit
+Name[et]=gedit
+Name[eu]=gedit
+Name[fa]=جی‌ادیت
+Name[fi]=gedit
+Name[fr]=gedit
+Name[fur]=gedit
+Name[ga]=gedit
+Name[gl]=gedit
+Name[he]=gedit
+Name[hr]=gedit
+Name[hu]=gedit
+Name[id]=gedit
+Name[is]=gedit
+Name[it]=gedit
+Name[ja]=gedit
+Name[ka]=gedit
+Name[kab]=gedit
+Name[kk]=gedit
+Name[km]=gedit
+Name[kn]=gedit
+Name[ko]=지에디트
+Name[lt]=gedit
+Name[lv]=gedit
+Name[mjw]=gedit
+Name[mk]=gedit
+Name[ms]=gedit
+Name[my]=gedit
+Name[nb]=gedit
+Name[nds]=gedit
+Name[nl]=gedit
+Name[nn]=gedit
+Name[oc]=gedit
+Name[or]=gedit
+Name[pa]=ਜੀ-ਸੰਪਾਦਕ
+Name[pl]=gedit
+Name[pt]=gedit
+Name[pt_BR]=gedit
+Name[ro]=gedit
+Name[ru]=gedit
+Name[sk]=gedit
+Name[sl]=gedit
+Name[sr]=Вилењакова бележница
+Name[sv]=gedit
+Name[ta]=gedit
+Name[th]=gedit
+Name[tk]=gedit
+Name[tr]=gedit
+Name[ug]=gedit
+Name[uk]=gedit
+Name[vi]=gedit
+Name[wa]=gedit
+Name[zh_CN]=gedit
+Name[zh_HK]=gedit
+Name[zh_TW]=gedit
+Name=gedit
+Comment[af]=Redigeer tekslêers
+Comment[am]=የጽሑፍ ፋይሎች ያስተካክሉ
+Comment[an]=Edita fichers de texto
+Comment[ar]=حرّر الملفات النصية
+Comment[as]=লিখনি ফাইল সম্পাদনা
+Comment[ast]=Editar ficheros de testu
+Comment[az]=Mətn fayllarını redaktə edin
+Comment[be]=Рэдагаванне тэкставых файлаў
+Comment[be@latin]=Redahuj tekstavyja fajły
+Comment[bg]=Редактиране на текстови файлове
+Comment[bn]=টেক্সট ফাইল সম্পাদনা করুন
+Comment[bn_IN]=টেক্সট ফাইল সম্পাদনা
+Comment[br]=Embann restroù testenn
+Comment[bs]=Izmijeni tekstualne datoteke
+Comment[ca]=Editeu fitxers de text
+Comment[ca@valencia]=Editeu fitxers de text
+Comment[ckb]=دەق دەستکاریبکە
+Comment[crh]=Metin dosyelerini tahrir et
+Comment[cs]=Upravujte textové soubory
+Comment[cy]=Golygu ffeiliau testun
+Comment[da]=Redigér tekstfiler
+Comment[de]=Textdateien bearbeiten
+Comment[dz]=ཚིག་ཡིག་ཡིག་སྣོད་ཚུ་ ཞུན་དག་རྐྱབས་ 
+Comment[el]=Επεξεργασία αρχείων κειμένου
+Comment[en_CA]=Edit text files
+Comment[en_GB]=Edit text files
+Comment[en@shaw]=𐑧𐑛𐑦𐑑 𐑑𐑧𐑒𐑕𐑑 𐑓𐑲𐑤𐑟
+Comment[eo]=Redakti tekstdosierojn
+Comment[es]=Edite archivos de texto
+Comment[et]=Tekstifailide redigeerimine
+Comment[eu]=Editatu testu-fitxategiak
+Comment[fa]=ویرایش پرونده‌های متنی
+Comment[fi]=Muokkaa tekstitiedostoja
+Comment[fr]=Éditer des fichiers texte
+Comment[fur]=Modifiche file di test
+Comment[ga]=Cuir comhaid téacs in eagar
+Comment[gd]=Deasaich faidhlichean teacsa
+Comment[gl]=Editar ficheiros de texto
+Comment[gu]=લખાણ ફાઇલોમાં ફેરફાર કરો
+Comment[he]=עריכת קובצי טקסט
+Comment[hi]=पाठ फ़ाइलें संपादित करें
+Comment[hr]=Uređivanje tekstovnih datoteka
+Comment[hu]=Szövegfájlok szerkesztése
+Comment[ia]=Rediger files de texto
+Comment[id]=Menyunting berkas teks
+Comment[ie]=Redacte files textual
+Comment[is]=Sýsla með textaskrár
+Comment[it]=Modifica file di testo
+Comment[ja]=テキストファイルを編集します
+Comment[ka]=ფაილების რედაქტირება
+Comment[kab]=Ẓreg ifuyla n uḍris
+Comment[kk]=Мәтіндік файлдарды түзету
+Comment[km]=កែ​សម្រួល​ឯកសារ​អត្ថបទ
+Comment[kn]=ಪಠ್ಯ ಕಡತಗಳನ್ನು ಸಂಪಾದಿಸು
+Comment[ko]=텍스트 파일을 편집합니다
+Comment[ku]=Pelên nivîsê sererast bike
+Comment[ln]=Bɔngisa kásá ya nkomá
+Comment[lt]=Redaguoti tekstinius failus
+Comment[lv]=Rediģēt teksta datnes
+Comment[mai]=पाठ फाइलकेँ संपादित करू
+Comment[mg]=Hanova raki-dahabolana
+Comment[mk]=Уредувај текстуални датотеки
+Comment[ml]=പദാവലി ഫയലുകളില്‍ മാറ്റം വരുത്തുക
+Comment[mn]=Текст файл боловсруулах
+Comment[mr]=मजकूर फाइल्स् संपादीत करा
+Comment[ms]=Sunting fail teks
+Comment[my]=စာသားဖိုင်များပြင်ဆင်ရန်
+Comment[nb]=Rediger tekstfiler
+Comment[nds]=Textdateien bewarken
+Comment[ne]=पाठ फाइल सम्पादन गर्नुहोस्
+Comment[nl]=Tekstbestanden bewerken
+Comment[nn]=Rediger tekstfiler
+Comment[oc]=Editar de fichièrs tèxte
+Comment[or]=ପାଠ୍ଯ ଫାଇଲଗୁଡ଼ିକୁ ସମ୍ପାଦନ କରନ୍ତୁ
+Comment[pa]=ਲਿਖਤ ਫਾਇਲਾਂ ਸੋਧੋ
+Comment[pl]=Edytor plików tekstowych
+Comment[ps]=ليکن دوتنې سمول
+Comment[pt]=Editar ficheiros de texto
+Comment[pt_BR]=Edite arquivos de texto
+Comment[ro]=Editare fișiere text
+Comment[ru]=Редактор текстовых файлов
+Comment[si]=පෙළ ගොනු සකසන්න
+Comment[sk]=Úprava textových súborov
+Comment[sl]=Enostavni urejevalnik besedilnih datotek
+Comment[sq]=Ndrysho file teksti
+Comment[sr]=Уређујте текстуалне документе
+Comment[sr@latin]=Uređujte tekstualne dokumente
+Comment[sv]=Redigera textfiler
+Comment[ta]=உரை கோப்புகளை திருத்தவும் 
+Comment[te]=పాఠ్య ఫైళ్ళను సవరించు
+Comment[th]=แก้ไขไฟล์ข้อความ
+Comment[tk]=Metin faýllary editle
+Comment[tr]=Metin dosyalarını düzenle
+Comment[ug]=تېكىست ھۆججەتلىرىنى تەھرىرلەش
+Comment[uk]=Редактор текстових файлів
+Comment[vi]=Soạn thảo tập tin văn bản
+Comment[wa]=Asspougnî des fitchîs tecses
+Comment[xh]=Hlela iifayili zombhalo
+Comment[zh_CN]=编辑文本文件
+Comment[zh_HK]=編輯文字檔
+Comment[zh_TW]=編輯文字檔
+Comment=Edit text files
+Exec=gedit %U
+Terminal=false
+Type=Application
+StartupNotify=true
+MimeType=text/plain;application/x-zerosize;
+Icon=org.gnome.gedit
+Categories=GNOME;GTK;Utility;TextEditor;
+Actions=new-window;new-document;
+# Translators: Do NOT translate or localize the semicolons. The list MUST also
+# end with a semicolon. It contains search terms to find this application.
+Keywords[be]=Text;Editor;Plaintext;Write;gedit;;Тэкст;Рэдактар;Тэкставы;Запіс;
+Keywords[bn_IN]=পাঠ্য;সম্পাদক;প্লেটেক্সট;লিখুন;gedit;
+Keywords[ca]=Text;Editor;text simple;escriure;gedit;
+Keywords[cs]=text;editor;prostý text;psát;psaní;gedit;
+Keywords[da]=Tekst;Editor;Redigering;Tekstredigering;Skrive;Skriv;gedit;
+Keywords[de]=Text;Editor;Klartext;Schreiben;gedit;
+Keywords[el]=Text;Editor;Plaintext;Write;gedit;κείμενο;επεξεργαστής;εγγραφή;γράψιμο;gedit;
+Keywords[en_GB]=Text;Editor;Plaintext;Write;gedit;
+Keywords[eo]=Teksto;Redaktilo;Plata teksto;Skribi;gedit;
+Keywords[es]=texto;editor;plano;escribir;gedit;
+Keywords[eu]=Testua;Editorea;Testu soila;Idatzi;gedit;
+Keywords[fa]=Text;Editor;Plaintext;Write;gedit;ویرایشگر متن;متن;ویرایشگر;نوشتار;
+Keywords[fi]=Text;Editor;Plaintext;Write;gedit;teksti;muokkain;editori;tekstieditori;tekstimuokkain;
+Keywords[fr]=texte brut;éditeur;écrire;gedit;
+Keywords[fur]=Text;Editor;Test sempliç;Scrivi;gedit;
+Keywords[gl]=Texto;Editor;Texto plano;Escribir;gedit;
+Keywords[he]=טקסט;עורך;עריכה;טקסט פשוט;כתיבה;gedit;
+Keywords[hr]=Tekst;Uređivač;Izvoran tekst;Piši;gedit;
+Keywords[hu]=Szöveg;Szerkesztő;Egyszerű szöveg;Írás;gedit;
+Keywords[id]=Teks;Penyunting;Teks Polos;Tulis;gedit;
+Keywords[is]=Texti;Ritill;Hreintexti;Skrifa;gedit;
+Keywords[it]=Editor;Testo;Text;Scrivere;gedit;
+Keywords[ja]=Text;Editor;Plaintext;Write;gedit;テキスト;エディター;プレーンテキスト;
+Keywords[ka]=Text;Editor;Plaintext;Write;gedit;
+Keywords[kab]=Aḍris;Amaẓrag;Plaintext;Aru;gedit;
+Keywords[kk]=Text;Editor;Plaintext;Write;gedit;Мәтін;Түзеткіш;Ашық мәтін;Жазу;
+Keywords[ko]=Text;텍스트;Editor;편집기;Plaintext;일반텍스트;Write;글쓰기;작성;gedit;지에디트;
+Keywords[lt]=Tekstas;Redaktorius;Grynasis tekstas;Rašymas;gedit;
+Keywords[lv]=Teksts;Redaktors;Vienkāršs teksts;Rakstīt;gedit;
+Keywords[mjw]=Text;Editor;Plaintext;Write;gedit;
+Keywords[ms]=Teks;Penyunting;Plaintext;Menulis;gedit;
+Keywords[nb]=Tekst;Redigering;Vanlig tekst;Skriv;gedit;
+Keywords[nl]=Text;tekst;Editor;teksteditor;tekstverwerker;Plaintext;platte tekst;Write;schrijven;gedit;
+Keywords[pa]=ਸ਼ਬਦ;ਟੈਕਸਟ;ਸੰਪਾਦਕ;ਐਡੀਟਰ;ਪਲੇਨਟੈਕਸਟ;ਜੀਸੰਪਾਦਕ;
+Keywords[pl]=Tekst;Text;Edytor;Zwykły tekst;Pisanie;Pisz;Napisz;Write;gedit;
+Keywords[pt]=Texto;Editor;Texto simples;Escrever;gedit;
+Keywords[pt_BR]=Texto;Editor;Texto simples;Plaintext;Escrever;Write;gedit;
+Keywords[ro]=Text;Editor;Plaintext;Write;Text simplu;Scrie;gedit;
+Keywords[ru]=Text;Editor;Plaintext;Write;gedit;Текст;Редактор;Запись;Текстовый;
+Keywords[sk]=Text;Editor;Čistý text;Písať;Napísať;Písanie;gedit;
+Keywords[sl]=Besedilo;Urejevalnik;tekst;Write;gedit;Pisanje;
+Keywords[sr]=Text;Editor;Plaintext;Write;текст;уређивач;обичан текст;писање;гедит;tekst;uređivač;običan tekst;pisanje;gedit;
+Keywords[sv]=Text;Redigerare;Vanlig text;Skriv;gedit;
+Keywords[th]=ข้อความ;เครื่องมือแก้ไข;ข้อความเปล่า;เขียน;gedit;
+Keywords[tr]=Metin;Düzenleyici;Düzyazı;Yaz;gedit;
+Keywords[uk]=Текст;Редактор;Запис;Написання;ґедіт;Text;Editor;Plaintext;Write;gedit;
+Keywords[vi]=Text;văn;bản;van;ban;Editor;sửa;sua;soạn;thảo;soan;thao;chữ;chu;Plaintext;Chữ thường;Chu thuong;Write;Ghi;Lưu;Luu;gedit;
+Keywords[zh_CN]=Text;Editor;Plaintext;Write;gedit;文本;文字;编辑器;纯文本;编写;
+Keywords[zh_TW]=Text;Editor;Plaintext;Write;gedit;文字;編輯器;純文字;撰寫;編寫;
+Keywords=Text;Editor;Plaintext;Write;gedit;
+DBusActivatable=true
+
+[Desktop Action new-window]
+Name[af]=Nuwe venster
+Name[ar]=نافذة جديدة
+Name[be]=Новае акно
+Name[bg]=Нов прозорец
+Name[bn_IN]=নতুন উইন্ডো
+Name[ca]=Finestra nova
+Name[ca@valencia]=_Finestra nova
+Name[ckb]=پەنجەریەکی نوێ
+Name[cs]=Nové okno
+Name[da]=Nyt vindue
+Name[de]=Neues Fenster
+Name[el]=Νέο παράθυρο
+Name[en_GB]=New Window
+Name[eo]=Nova fenestro
+Name[es]=Ventana nueva
+Name[eu]=Leiho berria
+Name[fa]=پنجره جدید
+Name[fi]=Uusi ikkuna
+Name[fr]=Nouvelle fenêtre
+Name[fur]=Gnûf barcon
+Name[gd]=Uinneag ùr
+Name[gl]=_Xanela nova
+Name[he]=חלון חדש
+Name[hr]=Novi prozor
+Name[hu]=Új ablak
+Name[ia]=Nove fenestra
+Name[id]=Jendela Baru
+Name[ie]=Nov fenestre
+Name[is]=Nýr gluggi
+Name[it]=Nuova finestra
+Name[ja]=新しいウィンドウ
+Name[ka]=ახალი ფანჯარა
+Name[kab]=Asfaylu amaynut
+Name[kk]=Жаңа терезе
+Name[ko]=새 창
+Name[lt]=Naujas langas
+Name[lv]=Jauns logs
+Name[mjw]=Kimi Window
+Name[ml]=പുതിയ ജാലകം
+Name[ms]=Tetingkap Baharu
+Name[nb]=Nytt vindu
+Name[ne]=नयाँ सञ्झ्याल
+Name[nl]=Nieuw venster
+Name[oc]=Novèla fenèstra
+Name[pa]=ਨਵੀਂ ਵਿੰਡੋ
+Name[pl]=Nowe okno
+Name[pt]=Nova janela
+Name[pt_BR]=Nova janela
+Name[ro]=Fereastră nouă
+Name[ru]=Создать окно
+Name[sk]=Nové okno
+Name[sl]=Novo okno
+Name[sr]=Нови прозор
+Name[sr@latin]=Novi prozor
+Name[sv]=Nytt fönster
+Name[th]=หน้าต่างใหม่
+Name[tr]=Yeni Pencere
+Name[uk]=Створити вікно
+Name[vi]=Cửa sổ mới
+Name[zh_CN]=新建窗口
+Name[zh_TW]=新增視窗
+Name=New Window
+Exec=gedit --new-window
+
+[Desktop Action new-document]
+Name[af]=Nuwe dokument
+Name[ar]=مستند جديد
+Name[be]=Новы дакумент
+Name[bg]=Нов документ
+Name[bn_IN]=নতুন ডকুমেন্ট
+Name[ca]=Crea un document nou
+Name[ca@valencia]=Crea un document nou
+Name[ckb]=بەڵگەنامەی نوێ
+Name[cs]=Nový dokument
+Name[da]=Nyt dokument
+Name[de]=Neues Dokument
+Name[el]=Νέο έγγραφο
+Name[en_GB]=New Document
+Name[eo]=Nova dokumento
+Name[es]=Documento nuevo
+Name[eu]=Dokumentu berria
+Name[fa]=سند جدید
+Name[fi]=Uusi asiakirja
+Name[fr]=Nouveau document
+Name[fur]=Gnûf document
+Name[gd]=Sgrìobhainn ùr
+Name[gl]=Novo documento
+Name[he]=מסמך חדש
+Name[hr]=Novi dokument
+Name[hu]=Új dokumentum
+Name[ia]=Nove documento
+Name[id]=Dokumen Baru
+Name[ie]=Nov document
+Name[is]=Nýtt skjal
+Name[it]=Nuovo documento
+Name[ja]=新しいドキュメント
+Name[ka]=ახალი დოკუმენტი
+Name[kab]=Isemli amaynut
+Name[kk]=Жаңа құжат
+Name[ko]=새 문서
+Name[lt]=Naujas dokumentas
+Name[lv]=Jauns dokuments
+Name[mjw]=Kimi Document
+Name[ml]=പൂതിയ രേഖ
+Name[ms]=Dokumen Baharu
+Name[nb]=Nytt dokument
+Name[ne]=नयाँ कागजात
+Name[nl]=Nieuw document
+Name[oc]=Novèl document
+Name[pa]=ਨਵਾਂ ਡੌਕੂਮੈਂਟ
+Name[pl]=Nowy dokument
+Name[pt]=Novo documento
+Name[pt_BR]=Novo documento
+Name[ro]=Document nou
+Name[ru]=Создать документ
+Name[sk]=Nový dokument
+Name[sl]=Nov dokument
+Name[sr]=Нови документ
+Name[sr@latin]=Novi dokument
+Name[sv]=Nytt dokument
+Name[th]=เอกสารใหม่
+Name[tr]=Yeni Belge
+Name[uk]=Створити документ
+Name[vi]=Tài liệu mới
+Name[zh_CN]=新建文档
+Name[zh_TW]=新增文件
+Name=New Document
+Exec=gedit --new-document
