modify wayfire.ini and add some network tools

--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -24,6 +24,8 @@ environment = dbus-update-activation-environment --systemd XDG_CURRENT_DESKTOP W
 autostart_wf_shell = false
 #background = swaybg -i /usr/share/backgrounds/xfce/background.png -m fill
 background = xfdesktop
+#for xfdesktop right click icon
+xfsettings = xfsettingsd
 clipimg = wl-paste -t image --watch cliphist -max-items 200 store
 cliptxt = wl-paste -t text --watch cliphist -max-items 200 store
 notifications = mako
