package: add waypoint and it's config

--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -81,6 +81,8 @@ binding_dashboard = <super> KEY_P
 binding_ocr = <super> KEY_R
 binding_musicfox = <super> KEY_M
 binding_wlsunset = <super> KEY_N
+binding_waypoint = <super> KEY_SEMICOLON
+
 command_telegram = /usr/bin/env QT_QPA_PLATFORMTHEME=gtk3 telegram-desktop
 command_fsearch = fsearch
 command_primaryclipboard = wl-paste --primary | head -c -1 | wtype -
@@ -114,6 +116,7 @@ command_dashboard = bash ~/.config/eww/dashboard/launch_dashboard
 command_ocr = ~/Scripts/wayland-ocr.sh
 command_musicfox = ~/Scripts/musicfox.sh
 command_wlsunset = ~/.local/bin/waybar-wlsun-set.sh --toggle
+command_waypoint = waypoint
 
 command_screenshot = ~/.local/bin/screen-shot.sh -f
 command_screenshot_interactive = ~/.local/bin/screen-shot.sh -s
