etc and skel update

--- a/airootfs/etc/skel/.config/go-musicfox/go-musicfox.ini
+++ b/airootfs/etc/skel/.config/go-musicfox/go-musicfox.ini
@@ -57,8 +57,10 @@ beepMp3Decoder=go-mp3
 mpdBin=/usr/bin/mpd
 # !!!注意!!! 一定要在配置文件中设置pid_file，否则在退出时不会kill掉mpd进程
 mpdConfigFile=/home/arch/.config/mpd/mpd.conf
-mpdNetwork=tcp
-mpdAddr=localhost:6600
+#mpdNetwork=tcp
+#mpdAddr=localhost:6600
+mpdNetwork=unix
+mpdAddr=/home/arch/.config/mpd/socket
 
 [unm]
 # UNM开关
