--- a/airootfs/etc/skel/.config/mpd/mpd.conf
+++ b/airootfs/etc/skel/.config/mpd/mpd.conf
@@ -4,22 +4,20 @@ db_file                 "~/.config/mpd/database"
 log_file                "~/.config/mpd/log"
 pid_file                "~/.config/mpd/pid"
 state_file              "~/.config/mpd/state"
-bind_to_address         "localhost"
-port                    "6600"
+bind_to_address         "~/.config/mpd/socket"
+#bind_to_address         "localhost"
+#port                    "6600"
 log_level               "default"
 restore_paused          "yes"
 auto_update             "yes"
 auto_update_depth       "4"
 
 audio_output {
-     type            "pulse"
-     name            "pulse audio"
+        type            "pipewire"
+        name            "PipeWire Sound Server"
 }
 
-audio_output {
-       type	"fifo"
-       name	"Visualizer feed"
-       path	"/tmp/mpd.fifo"
-       format	"44100:16:2"
+input {
+    plugin "flac"
+    enabled "yes"
 }
-
