--- a/airootfs/etc/skel/.config/wayfire.ini
+++ b/airootfs/etc/skel/.config/wayfire.ini
@@ -145,7 +145,7 @@ focus_buttons = BTN_LEFT | BTN_MIDDLE | BTN_RIGHT
 focus_buttons_passthrough = true
 max_render_time = -1
 only_decorate_gtk = true
-plugins = alpha animate autostart command expo fast-switcher grid invert move place resize window-rules wm-actions wobbly zoom switcher oswitch vswitch vswipe extra-gestures gtk-shell scale wf-info firedecor
+plugins = alpha animate autostart command expo fast-switcher grid invert move place resize window-rules wm-actions wobbly zoom switcher oswitch vswitch vswipe extra-gestures gtk-shell scale wf-info firedecor showrepaint
 # server由compositor渲染边框可取消大部分边框
 preferred_decoration_mode = client
 transaction_timeout = 100
@@ -502,3 +502,7 @@ active_border = \#0db9d7ff
 inactive_accent = \#a9b1d6ff
 inactive_border = \#a9b1d6ff
 uses_if = app_id is "xfce4-terminal" | app_id is "Alacritty" | app_id is "kitty"
+
+[showrepaint]
+reduce_flicker = true
+toggle = <alt> <super> KEY_S
