update and add nginx config

--- a/airootfs/etc/skel/.config/wayfire-xfce4.ini
+++ b/airootfs/etc/skel/.config/wayfire-xfce4.ini
@@ -133,7 +133,7 @@ focus_buttons = BTN_LEFT | BTN_MIDDLE | BTN_RIGHT
 focus_buttons_passthrough = true
 max_render_time = -1
 only_decorate_gtk = true
-plugins = alpha animate autostart command expo fast-switcher grid invert move place resize window-rules wm-actions wobbly zoom switcher oswitch vswitch vswipe extra-gestures gtk-shell scale wf-info firedecor showrepaint
+plugins = alpha animate autostart command expo fast-switcher grid invert move place resize window-rules wm-actions wobbly zoom switcher oswitch vswitch vswipe extra-gestures gtk-shell scale wf-info firedecor showrepaint foreign-toplevel input-method-v1 session-lock shortcuts-inhibit
 # server由compositor渲染边框可取消大部分边框
 preferred_decoration_mode = client
 transaction_timeout = 100
