--- a/airootfs/etc/nginx/nginx.conf
+++ b/airootfs/etc/nginx/nginx.conf
@@ -2,6 +2,7 @@
 # See nginxconfig.txt for the configuration share link
 
 user                 arch;
+pid                  /run/nginx.pid;
 worker_processes     auto;
 worker_rlimit_nofile 65535;
 
@@ -20,7 +21,7 @@ http {
     tcp_nodelay            on;
     server_tokens          off;
     log_not_found          off;
-    types_hash_max_size    2048;
+    types_hash_max_size    4096;
     types_hash_bucket_size 64;
     client_max_body_size   16M;
 
