change nginx config

--- a/airootfs/etc/nginx/sites-available/code.local.conf
+++ b/airootfs/etc/nginx/sites-available/code.local.conf
@@ -4,15 +4,15 @@ server {
     listen              443 ssl;
     listen              [::]:443 ssl;
     http2               on;
-    server_name         file.stick.local;
-    root                /var/www/file.stick.local/public;
+    server_name         code.local;
+    root                /var/www/code.local/public;
 
     # SSL
     ssl_certificate     /etc/nginx/ssl/selfsigned.crt;
     ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
 
     # security
-    include             nginxconfig.io/security.conf;
+    # include             nginxconfig.io/security.conf;
 
     # logging
     access_log          /var/log/nginx/access.log combined buffer=512k flush=1m;
@@ -30,17 +30,4 @@ server {
 
     # additional config
     # include nginxconfig.io/general.conf;
-}
-
-# subdomains redirect
-server {
-    listen              443 ssl;
-    listen              [::]:443 ssl;
-    http2               on;
-    server_name         *.file.stick.local;
-
-    # SSL
-    ssl_certificate     /etc/nginx/ssl/selfsigned.crt;
-    ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
-    return              301 https://file.stick.local$request_uri;
 }
