--- a/airootfs/etc/nginx/sites-available/file.local.conf
+++ b/airootfs/etc/nginx/sites-available/file.local.conf
@@ -4,8 +4,8 @@ server {
     listen              443 ssl;
     listen              [::]:443 ssl;
     http2               on;
-    server_name         terminal.stick.local;
-    root                /var/www/terminal.stick.local/public;
+    server_name         file.local;
+    root                /var/www/file.local/public;
 
     # SSL
     ssl_certificate     /etc/nginx/ssl/selfsigned.crt;
@@ -23,24 +23,11 @@ server {
 
     # reverse proxy
     location / {
-        proxy_pass            http://127.0.0.1:8081;
+        proxy_pass            http://127.0.0.1:8080;
         proxy_set_header Host $host;
         include               nginxconfig.io/proxy.conf;
     }
 
     # additional config
-    include nginxconfig.io/general.conf;
-}
-
-# subdomains redirect
-server {
-    listen              443 ssl;
-    listen              [::]:443 ssl;
-    http2               on;
-    server_name         *.terminal.stick.local;
-
-    # SSL
-    ssl_certificate     /etc/nginx/ssl/selfsigned.crt;
-    ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
-    return              301 https://terminal.stick.local$request_uri;
+    # include nginxconfig.io/general.conf;
 }
