--- a/airootfs/etc/nginx/nginx.conf
+++ b/airootfs/etc/nginx/nginx.conf
@@ -25,6 +25,9 @@ http {
     types_hash_bucket_size 64;
     client_max_body_size   16M;
 
+    proxy_headers_hash_max_size 1024;
+    proxy_headers_hash_bucket_size 128;
+
     # MIME
     include                mime.types;
     default_type           application/octet-stream;
